--- a/mo/include/header.html
+++ b/mo/include/header.html
@@ -176,7 +176,7 @@
     <div class="header_area">
         <div class="header_title_area">
             <a href="/cm" title="메인화면 이동">
-                <h1><img src="../../mo/include/images/logo_main_work24.svg" alt="고용24"></h1>
+                <h1><img src="../mobile/include/images/logo_main_work24.svg" alt="고용24"></h1>
             </a><!-- 23/12/04 퍼블: (시범운영) 추가 -->
             <ul class="header_division"><!-- 활성화 할 li에 active 클래스네임 추가 -->
                 <li class="active">
