--- a/pc/include/footer.html
+++ b/pc/include/footer.html
@@ -78,7 +78,7 @@
 <div class="group">
 	<div class="area">
 		<div class="logos">
-			<img src="/allcare/pc/include/images/footer_ci01.png" alt="고용24">
+			<img src="../pc/include/images/footer_ci01.png" alt="고용24">
 		</div>
 		<div class="flex">
 			<div class="flex_left">
@@ -125,10 +125,10 @@
 					
 
 					<a href="#none" style="margin-left:auto;">
-						<img src="/allcare/pc/include/images/WA_Mark.png" style="cursor:default;width:54px;height:40px;" alt="과학기술정보통신부 WA(WEB접근성) 품질인증 마크, 웹와치(WebWatch) 2025.2.3 ~ 2026.2.2" title="WA 품질인증 마크, 웹와치(WebWatch) 2025.2.3 ~ 2026.2.2">
+						<img src="../pc/include/images/WA_Mark.png" style="cursor:default;width:54px;height:40px;" alt="과학기술정보통신부 WA(WEB접근성) 품질인증 마크, 웹와치(WebWatch) 2025.2.3 ~ 2026.2.2" title="WA 품질인증 마크, 웹와치(WebWatch) 2025.2.3 ~ 2026.2.2">
 					</a>
 					<a href="#none" onclick="window.open('https://www.eprivacy.or.kr/front/certifiedSiteMark/certifiedSiteMarkPopup.do?certCmd=EP&amp;certNum=2024-EP-N007','seal','width=527,height=720,location=no,status=no,scrollbars=no')" title="새창 열림">
-						<img src="/allcare/pc/include/images/eprivacyplus_text.png" style="cursor:pointer;width:45px;height:40px;margin-left: 16px;" alt="개인정보보호우수앱 시스템 인증마크">
+						<img src="../pc/include/images/eprivacyplus_text.png" style="cursor:pointer;width:45px;height:40px;margin-left: 16px;" alt="개인정보보호우수앱 시스템 인증마크">
 					</a>
 
 				</div>
@@ -136,8 +136,8 @@
 			</div>
 
 		<div class="logos gov">
-			<a href="http://www.moel.go.kr" target="_blank" title="새창 열림"><img src="/allcare/pc/include/images/footer_ci02.png" alt="고용노동부"></a>
-			<a href="https://www.keis.or.kr" target="_blank" title="새창 열림"><img src="/allcare/pc/include/images/footer_ci03.png" alt="한국고용정보원"></a>
+			<a href="http://www.moel.go.kr" target="_blank" title="새창 열림"><img src="../pc/include/images/footer_ci02.png" alt="고용노동부"></a>
+			<a href="https://www.keis.or.kr" target="_blank" title="새창 열림"><img src="../pc/include/images/footer_ci03.png" alt="한국고용정보원"></a>
 			<span class="copyright">이 누리집은 고용노동부와 고용노동부 산하기관 한국고용정보원의 누리집 입니다.</span>
 		</div>
 	</div>
