--- a/pc/css/contents.css
+++ b/pc/css/contents.css
@@ -16,7 +16,7 @@
 .new_sel_span::after {content: ''; width: 16px; height: 16px; position: absolute; top: 50%; right: 12px; transform: translateY(-50%); background: url('../include/images/arrow16_down.svg') no-repeat center / contain;}
 h3.m-b16 {margin-bottom: 16px !important;}
 
-/* 03. 졸업생특화프로그램 - 운영대학조회 */
+/* 운영대학 목록 */
 .wk_gsprog_uni>div+div {margin-top: 40px;}
 .wk_gsprog_uni .step_cont_area {padding: 24px 20px; border: 1px solid #ddd; border-radius: 8px;}
 .wk_gsprog_uni .step_cont_area ol {margin-top: 10px; display: flex; justify-content: space-between; align-items: stretch; gap: 24px;}
@@ -37,4 +37,32 @@ h3.m-b16 {margin-bottom: 16px !important;}
 .wk_gsprog_uni .statusDesc_cont p {font-size: 16px; color: #555; font-weight: 400; line-height: 28px; letter-spacing: -0.32px;}
 .wk_gsprog_uni .statusDesc_cont button {padding: 6px 16px; border-radius: 4px; border: 1px solid #757575; font-size: 16px; color: #333; font-weight: 600; line-height: 28px; letter-spacing: -0.32px;}
 
-/* 04. 졸업생특화프로그램 - 프로그램 조회 (팝업) */
+/* 운영대학 목록 - 프로그램 조회 팝업 */
+.popup-dim {pointer-events: auto; position: fixed; margin: 0; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.16);  z-index: 9998;}
+.new_popup {padding: 32px 40px; position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); background-color: #fff; width: 960px; height: 680px; z-index: 9999;}
+.newpop_inner {height: 500px; overflow-y: auto;}
+.new_popup .new_table tr th {padding: 12px 20px;}
+.new_popup .new_table tr td {padding: 24px 20px;}
+.new_popup .new_table tr th:first-child, .new_popup .new_table tr td:first-child {padding-left: 24px;}
+.new_popup .new_table tr th:last-child, .new_popup .new_table tr td:last-child {padding-right: 24px;}
+.new_popup .new_table td {text-align: left;}
+.new_popup .new_table td span {vertical-align: baseline;}
+.new_popup .new_table td:first-child .prog_uni p {font-size: 16px; font-weight: 400; line-height: 28px; letter-spacing: -0.32px;}
+.new_popup .new_table td:first-child .prog_tit p {margin: 8px 0; font-size: 18px; font-weight: 600; line-height: 28px; letter-spacing: -0.36px;}
+.new_popup .new_table td:first-child .prog_dsc {display: flex; align-items: baseline; gap: 16px;}
+.new_popup .new_table td:first-child .prog_dsc .prog_tag span {display: none; padding: 4px 6px; font-size: 12px; font-weight: 600; line-height: 14px; letter-spacing: -0.24px; border-radius: 4px; color: var(--col_blue); background: rgba(77, 101, 225, 0.10);}
+.new_popup .new_table td:first-child .prog_dsc .prog_tag span.on {display: block;}
+.new_popup .new_table td:first-child .prog_dsc .prog_tag .tag_cdp {color: #19B3BD; background-color: rgb(25, 179, 189, 0.05);}
+.new_popup .new_table td:first-child .prog_dsc .prog_tag .tag_lerc {color: #F0651F; background-color: rgb(240, 101, 31, 0.05);}
+.new_popup .new_table td:first-child .prog_dsc .prog_tag .tag_pm {color: #E0024B; background-color: rgb(224, 2, 75, 0.05);}
+.new_popup .new_table td:first-child .prog_dsc .prog_tag .tag_etc {color: #555; background-color: rgb(85, 85, 85, 0.10);}
+.new_popup .new_table td:first-child .prog_dsc .prog_site span {display: none; color: #39425D; border: 1px solid #39425D; padding: 4px 6px; font-size: 12px; font-weight: 600; line-height: 14px; letter-spacing: -0.24px; border-radius: 4px;} 
+.new_popup .new_table td:first-child .prog_dsc .prog_site span.on {display: block;}
+.new_popup .new_table td:first-child .prog_dsc .prog_site .onsite {color: var(--col_blue); border: 1px solid var(--col_blue);}
+.new_popup .new_table td:first-child .prog_dsc .prog_year p {color: #333; font-size: 12px; font-weight: 600; line-height: 24px; letter-spacing: -0.24px;}
+.new_popup .new_table td:last-child {}
+.new_popup .new_table td:last-child li {}
+.new_popup .new_table td:last-child li span {}
+.new_popup .new_table td:last-child .oper_year {}
+.new_popup .new_table td:last-child .oper_time {}
+.new_popup .new_table td:last-child .oper_count {}
