--- a/pc/css/contents.css
+++ b/pc/css/contents.css
@@ -4,7 +4,6 @@
 /* 공통 */
 /* new_table : 테이블 padding 값 수정 */
 /* new_sel_span : 라운드형태의 select 버튼 수정 */
-
 .sr-only {position: absolute; width: 1px; height: 1px; padding: 0; margin: -1px; overflow: hidden; clip: rect(0 0 0 0); white-space: nowrap; border: 0; font-size: 0;}
 .new_table tr th, .new_table tr td {padding: 12px 10px;}
 .new_table tr th:first-child, .new_table tr td:first-child {padding-left: 20px;}
@@ -14,9 +13,9 @@
 .new_sel_span {position: relative;}
 .new_sel_span select {padding: 6px 40px 6px 16px; border-radius: 9999px; font-size: 16px; letter-spacing: -0.32px; appearance: none; -webkit-appearance: none; -moz-appearance: none;}
 .new_sel_span::after {content: ''; width: 16px; height: 16px; position: absolute; top: 50%; right: 12px; transform: translateY(-50%); background: url('../include/images/arrow16_down.svg') no-repeat center / contain;}
-h3.m-b16 {margin-bottom: 16px !important;}
 
-/* 운영대학 목록 */
+
+/* 운영대학 목록 (UI_ADHPAaM01) */
 .wk_gsprog_uni>div+div {margin-top: 40px;}
 .wk_gsprog_uni .step_cont_area {padding: 24px 20px; border: 1px solid #ddd; border-radius: 8px;}
 .wk_gsprog_uni .step_cont_area ol {margin-top: 10px; display: flex; justify-content: space-between; align-items: stretch; gap: 24px;}
@@ -28,19 +27,17 @@ h3.m-b16 {margin-bottom: 16px !important;}
 .wk_gsprog_uni .step_btn_box {margin-top: 24px; display: flex; justify-content: space-between; align-items: center;}
 .wk_gsprog_uni .step_btn_box p {padding-left: 16px; position: relative; font-size: 16px; color: #333; font-weight: 400; line-height: 28px; letter-spacing: -0.32px;}
 .wk_gsprog_uni .step_btn_box p::before {content: ''; width: 4px; height: 4px; position: absolute; left: 4px; top: 50%; transform: translateY(-50%); background-color: #555; border-radius: 50%;}
-
 .wk_gsprog_uni .uniporg_cont article {margin-bottom: 40px;}
 .wk_gsprog_uni .uniporg_cont fieldset {border: none;}
 .wk_gsprog_uni .new_table tbody tr td:nth-child(3) {word-break: keep-all;}
 .wk_gsprog_uni th, .wk_gsprog_uni td {padding-top: 12px; padding-bottom: 12px;}
 .wk_gsprog_uni tr+tr {border-top: 1px solid #eee;}
-
 .wk_gsprog_uni .statusDesc_cont {padding: 16px 24px; border: 1px solid #ddd; border-radius: 8px; display: flex; justify-content: space-between; align-items: center;}
 .wk_gsprog_uni .statusDesc_cont p {font-size: 16px; color: #555; font-weight: 400; line-height: 28px; letter-spacing: -0.32px;}
 .wk_gsprog_uni .statusDesc_cont button {padding: 6px 16px; border-radius: 4px; border: 1px solid #757575; font-size: 16px; color: #333; font-weight: 600; line-height: 28px; letter-spacing: -0.32px;}
 
 
-/* 운영대학 목록 - 프로그램 조회 팝업 */ 
+/* 운영대학 목록 - 프로그램 조회 팝업 (UI_ADHPAaM02) */ 
 .popup-dim {pointer-events: auto; position: fixed; margin: 0; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.16);  z-index: 9998;}
 .new_popup {padding: 32px 40px; position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); background-color: #fff; width: 960px; height: calc(100% - 200px); max-height: 680px; z-index: 9999;}
 .new_popup .newpop_inner {height: calc(100% - 90px); overflow-y: auto;}
@@ -63,7 +60,6 @@ h3.m-b16 {margin-bottom: 16px !important;}
 .new_popup .new_table td:first-child .prog_dsc .prog_site span.on {display: block;}
 .new_popup .new_table td:first-child .prog_dsc .prog_site .onsite {color: var(--col_blue); border: 1px solid var(--col_blue);}
 .new_popup .new_table td:first-child .prog_dsc .prog_year p {color: #333; font-size: 12px; font-weight: 600; line-height: 24px; letter-spacing: -0.24px;}
-
 .new_popup .newpop_tit {padding-bottom: 24px; margin-bottom: 24px; border-bottom: 1px solid #eee; display: flex; justify-content: space-between; align-items: center;}
 .new_popup .newpop_tit h4 {font-size: 28px; color: #111; font-weight: 600; line-height: 40px;}
 .new_popup .newpop_tit .closed {display: block; position: absolute; right: 40px; top: 36px; height: 32px; width: 32px; background: url('../include/images/ico32_close.svg') no-repeat 0 0; z-index: 999;}
@@ -79,10 +75,13 @@ h3.m-b16 {margin-bottom: 16px !important;}
 .new_popup tr.new_date .date_select {position: relative; margin-right: 16px; background-color: #fff; border-radius: 4px; border: 1px solid var(--col_button);}
 .new_popup tr.new_date .date_select select#newDate {padding: 6px 60px 6px 12px; height: 40px; font-size: 16px; color: #555; font-weight: 400; line-height: 24px; letter-spacing: -0.32px; appearance: none; -webkit-appearance: none; -moz-appearance: none;}
 .new_popup tr.new_date .date_select::after {content: ''; width: 16px; height: 16px; position: absolute; top: 50%; right: 14px; transform: translateY(-50%); background: url('../include/images/arrow16_down.svg') no-repeat center / contain;}
-
 .new_popup .newpop_inner .box_form_content {padding: 24px 40px;}
 .new_popup .newpop_inner .box_chk-group input[type="checkbox"] + label {margin-left: 4px;}
 .new_popup .newpop_inner .box_chk-group > span {margin-right: 16px;}
 .new_popup .newpop_inner th, .new_popup .newpop_inner td {padding-top: 12px; padding-bottom: 12px;}
 .new_popup .newpop_inner tr+tr {border-top: 1px solid #eee;}
 .new_popup .newpop_inner .search_table td .box_chk-group {min-height: initial;}
+
+/* 참여신청서 - 목록없음 (UI_ADHPAbM01) */
+.pa_page_empty {text-align: center; display: flex; flex-direction: column; align-items: center;}
+.pa_page_empty p {font-size: 18px; color: #111; font-weight: 600;}
