--- a/pc/include/footer.html
+++ b/pc/include/footer.html
@@ -182,7 +182,7 @@
 					<div class="box_table_group">
 						<div class="cell">
 							<div class="cell_wrap">
-								<span class="box_ipt">
+								<span class="box_ipt new_ipt">
 									<input type="password" class="input_txt big" title="신규 비밀번호를 입력" placeholder="신규 비밀번호를 입력해 주세요." name="pwdCfrmYnPwd01" id="pwdCfrmYnPwd01" maxlength="24">
 									<button type="reset" class="ico16_delete"><span class="blind">삭제</span></button>
 								</span>
@@ -197,7 +197,7 @@
 				<div class="list_txt">
 					<div class="box_table_group">
 						<div class="cell">
-							<span class="box_ipt">
+							<span class="box_ipt new_ipt">
 								<input type="password" class="input_txt big" title="신규 비밀번호를 한번 더 입력" placeholder="신규 비밀번호를 한번 더 입력해 주세요." name="pwdCfrmYnPwd02" id="pwdCfrmYnPwd02" maxlength="24">
 								<button type="reset" class="ico16_delete"><span class="blind">삭제</span></button>
 							</span>
@@ -211,7 +211,7 @@
 					<div class="box_table_group">
 						<div class="cell">
 							<div class="cell_wrap">
-								<span class="box_ipt">
+								<span class="box_ipt new_ipt">
 									<input type="text" class="input_txt big" title="성명입력" placeholder="성명을 입력해 주세요." name="pwdCfrmUsrNm2" id="pwdCfrmUsrNm2" maxlength="24">
 									<button type="reset" class="ico16_delete"><span class="blind">삭제</span></button>
 								</span>
@@ -262,7 +262,7 @@
 					<div class="box_table_group">
 						<div class="cell">
 							<div class="cell_wrap">
-								<span class="box_ipt">
+								<span class="box_ipt new_ipt">
 									<input type="password" class="input_txt big" title="비밀번호를 입력" placeholder="비밀번호를 입력해 주세요." name="pwdCfrmYnPwd00" id="pwdCfrmYnPwd00" maxlength="24">
 									<button type="reset" class="ico16_delete"><span class="blind">삭제</span></button>
 								</span>
@@ -320,7 +320,7 @@
 					<div class="box_table_group">
 						<div class="cell">
 							<div class="cell_wrap">
-								<span class="box_ipt">
+								<span class="box_ipt new_ipt">
 									<input type="password" class="input_txt big" title="비밀번호를 입력" placeholder="비밀번호를 입력해 주세요." name="pwdCfrmYnPwd04" id="pwdCfrmYnPwd04" maxlength="24">
 									<button type="reset" class="ico16_delete"><span class="blind">삭제</span></button>
 								</span>
@@ -335,7 +335,7 @@
 					<div class="box_table_group">
 						<div class="cell">
 							<div class="cell_wrap">
-								<span class="box_ipt">
+								<span class="box_ipt new_ipt">
 									<input type="password" class="input_txt big" title="신규 비밀번호를 입력" placeholder="신규 비밀번호를 입력해 주세요." name="pwdCfrmYnPwd05" id="pwdCfrmYnPwd05" maxlength="24">
 									<button type="reset" class="ico16_delete"><span class="blind">삭제</span></button>
 								</span>
@@ -351,7 +351,7 @@
 					<div class="box_table_group">
 						<div class="cell">
 							<div class="cell_wrap">
-								<span class="box_ipt">
+								<span class="box_ipt new_ipt">
 									<input type="password" class="input_txt big" title="신규 비밀번호를 입력" placeholder="신규 비밀번호를 입력해 주세요." name="pwdCfrmYnPwd06" id="pwdCfrmYnPwd06" maxlength="24">
 									<button type="reset" class="ico16_delete"><span class="blind">삭제</span></button>
 								</span>
@@ -366,7 +366,7 @@
 					<div class="box_table_group">
 						<div class="cell">
 							<div class="cell_wrap">
-								<span class="box_ipt">
+								<span class="box_ipt new_ipt">
 									<input type="text" class="input_txt big" title="성명입력" placeholder="성명을 입력해 주세요." name="pwdCfrmUsrNm" id="pwdCfrmUsrNm" maxlength="24">
 									<button type="reset" class="ico16_delete"><span class="blind">삭제</span></button>
 								</span>
@@ -417,7 +417,7 @@
 					<div class="box_table_group">
 						<div class="cell">
 							<div class="cell_wrap">
-								<span class="box_ipt">
+								<span class="box_ipt new_ipt">
 									<input type="text" class="input_txt big" title="성명입력" placeholder="성명을 입력해 주세요." name="pwdCfrmUsrNm1" id="pwdCfrmUsrNm1" maxlength="24">
 									<button type="reset" class="ico16_delete"><span class="blind">삭제</span></button>
 								</span>
